force-app/main/default/objects/Access_Preference__c/Access_Preference__c.object-meta.xml
<CustomObject>
    <description>One standing functional need, in the person's own words. The 'ask once, not forever' mechanism.</description>
    <label>Access Preference</label>
    <nameField>
        <label>Preference Number</label>
        <type>AutoNumber</type>
        <displayFormat>PR-{00000}</displayFormat>
    </nameField>
    <pluralLabel>Access Preferences</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>