force-app/main/default/objects/Access_Preference__c/fields/Access_Profile__c.field-meta.xml
<CustomField>
    <fullName>Access_Profile__c</fullName>
    <description>The person this preference belongs to.</description>
    <inlineHelpText>The person whose preference this is. It belongs to them, not to a manager and not to a team.</inlineHelpText>
    <label>Access Profile</label>
    <referenceTo>Access_Profile__c</referenceTo>
    <relationshipLabel>Access Preferences</relationshipLabel>
    <relationshipName>Access_Preferences</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>