force-app/main/default/objects/Access_Preference__c/fields/Auto_Apply__c.field-meta.xml
<CustomField>
    <fullName>Auto_Apply__c</fullName>
    <description>Whether this preference is shown automatically in its scope.</description>
    <inlineHelpText>When ticked, this is shown to the people in scope without the person having to raise it again. That is the entire point: nobody should have to re-explain themselves to each new manager.</inlineHelpText>
    <label>Auto Apply</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>