force-app/main/default/objects/Access_Preference__c/fields/Claim_Code_Hash__c.field-meta.xml
<CustomField>
    <fullName>Claim_Code_Hash__c</fullName>
    <description>Salted hash of the six-character code the person keeps. They hold the code; we hold only this. It lets somebody turn off a standing disclosure from a text message without us ever knowing who they are, which is the only way an anonymous channel can honour a withdrawal.</description>
    <inlineHelpText>Never shown to staff. The person's own copy of the code is the only readable one.</inlineHelpText>
    <label>Claim Code Hash</label>
    <length>64</length>
    <type>Text</type>
</CustomField>