force-app/main/default/objects/Access_Preference__c/fields/Revoked_On__c.field-meta.xml
<CustomField>
    <fullName>Revoked_On__c</fullName>
    <description>Revocation is instant and requires no reason.</description>
    <label>Revoked On</label>
    <type>DateTime</type>
</CustomField>