force-app/main/default/objects/Access_Preference__c/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <label>Scope</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>Always</fullName>
                    <default>true</default>
                    <label>Always</label>
                </value>
                <value>
                    <fullName>Meetings</fullName>
                </value>
                <value>
                    <fullName>This team</fullName>
                </value>
                <value>
                    <fullName>This manager</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>