force-app/main/default/objects/Access_Preference__c/fields/Shared_With__c.field-meta.xml
<CustomField>
    <fullName>Shared_With__c</fullName>
    <description>Who the person chose to show this to.</description>
    <inlineHelpText>Who the person chose. Not who would find it useful. Showing it to anyone else is a disclosure they did not make.</inlineHelpText>
    <label>Shared With</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>Manager only</fullName>
                    <default>true</default>
                    <label>Manager only</label>
                </value>
                <value>
                    <fullName>Meeting hosts</fullName>
                </value>
                <value>
                    <fullName>My team</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>