force-app/main/default/objects/Access_Preference__c/listViews/All_Preferences.listView-meta.xml
<ListView>
    <fullName>All_Preferences</fullName>
    <columns>NAME</columns>
    <columns>Statement__c</columns>
    <columns>Shared_With__c</columns>
    <columns>Scope__c</columns>
    <columns>Auto_Apply__c</columns>
    <columns>Revoked_On__c</columns>
    <filterScope>Everything</filterScope>
    <label>All preferences</label>
</ListView>