force-app/main/default/objects/Access_Preference__c/listViews/Live_Right_Now.listView-meta.xml
<ListView>
    <fullName>Live_Right_Now</fullName>
    <columns>NAME</columns>
    <columns>Statement__c</columns>
    <columns>Shared_With__c</columns>
    <columns>Scope__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Revoked_On__c</field>
        <operation>equals</operation>
        <value></value>
    </filters>
    <label>Live right now</label>
</ListView>