force-app/main/default/objects/Access_Preference__c/listViews/Turned_Off.listView-meta.xml
<ListView>
    <fullName>Turned_Off</fullName>
    <columns>NAME</columns>
    <columns>Statement__c</columns>
    <columns>Revoked_On__c</columns>
    <columns>Shared_With__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Revoked_On__c</field>
        <operation>notEqual</operation>
        <value></value>
    </filters>
    <label>Turned off</label>
</ListView>